# tscn_parser

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  str_helper.rs  tscn_helper.rs
src/types/: curve.rs  mod.rs  types.rs
