[package]
name = "parser"
version = "0.1.0"
authors = ["Artjoms Travkovs <atravkovs@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3"
regex = "1.3"
indexmap = "1.3"
lazy_static = "1.4"

[dependencies.specs-physics]
git = "https://github.com/atravkovs/specs-physics"
branch = "fix-batch"
features = ["dim2"]
